--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
           <button onclick="finding()">Start Finding</button>
           <button onclick="reset()">Reset</button>
         </div>
+        <br>
+        <div style="text-align: center">
+          <b>By <a href="https://github.com/Ohmmy569"  target="_blank">Ohmmy</a> </b>
+        </div>
       </div>
     </div>
   </body>
